--- a/WpfSampLauncher.csproj
+++ b/WpfSampLauncher.csproj
@@ -15,18 +15,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="SharpVectors" Version="1.8.4" />
+    <PackageReference Include="YandexDisk.Client" Version="1.3.27" />
   </ItemGroup>
 
   <ItemGroup>
     <Resource Include="Viwes\Resurces\Images\bg.png" />
     <Resource Include="Viwes\Resurces\Images\Exit.svg" />
     <Resource Include="Viwes\Resurces\Images\folding.svg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="ViewModels\" />
   </ItemGroup>
 
 </Project>
